--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "name": "Koren's URL Shortener",
   "description": "This extension will shorten urls!",
   "version": "1.0",
-
+  "icons": "./128.png",
   "browser_action": {
     "default_popup": "popup.html",
     "default_icon": {
