--- a/manifest.json
+++ b/manifest.json
@@ -4,11 +4,11 @@
   "name": "Koren's URL Shortener",
   "description": "This extension will shorten urls!",
   "version": "1.0",
-  "icons": "./128.png",
+  "icons": "128.png",
   "browser_action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "128": "./128.png"
+      "128": "128.png"
     }
   },
 
