--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   "browser_action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "128": "128.png"
+      "128": "icon128.png"
     }
   },
 
